updated the verification pages

--- a/frontend/src/components/Auth/Login/Login.css
+++ b/frontend/src/components/Auth/Login/Login.css
@@ -16,6 +16,19 @@
     border-radius: 10px;
 }
 
+select{   
+    width: 100%;
+    padding: 15px 20px;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: var(--primaryColor);
+    background-color: var(--tertiaryColor);    
+    border: none;
+    border-radius: 10px;
+    outline: none !important;
+}
+
 .grey-hover{
     font-size: 18px;
     transition: all 0.3s ease-in;
