--- a/frontend/src/components/Auth/Signup/License/License.css
+++ b/frontend/src/components/Auth/Signup/License/License.css
@@ -5,11 +5,12 @@
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
+  margin-top: 50px;
   color: var(--primaryColor);
   background-color: var(--tertiaryColor);
   background-clip: padding-box;
   border: none;
-  border-radius: 10px;
+  margin: 20px auto;
 }
 
 input#form-upload-button {
@@ -27,6 +28,17 @@ input[type="file"] {
   outline: none !important;
 }
 
+.file-container {
+  background-color: var(--tertiaryColor);
+  height: 400px;
+}
+
+.image-container {
+  height: 285px;
+  width: 350px;
+  margin: 10px auto;
+}
+
 .custom-file-input {
   display: block;
   width: 100%;
@@ -35,22 +47,29 @@ input[type="file"] {
   font-weight: 400;
   line-height: 1.5;
   color: var(--primaryColor);
-  background-color: var(--tertiaryColor) !important;
+  background-color: white !important;
   background-clip: padding-box;
   border: none;
-  border-radius: 10px;
   opacity: 1;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
 }
-
+.custom-upload-button{
+  background: transparent;
+  border: none;
+  outline: none;
+}
 .custom-file-input::-webkit-file-upload-button {
   visibility: hidden;
 }
+
+.modal{
+  padding-right: 0px;
+}
 .custom-file-input::before {
-  content: "Select document";
+  content: "";
   height: 100%;
   color: var(--primaryColor);
   display: inline-block;
@@ -69,3 +88,84 @@ input[type="file"] {
 .custom-file-input:active::before {
   background: transparent;
 }
+#container-circles {
+  position: absolute;
+  left: 50%;
+  bottom: 90px;
+}
+#outer-circle {
+  left: -37px;
+  height: 75px;
+  width: 75px;
+  background-color: hsla(0, 0%, 100%, 0.4);
+  z-index: 1;
+}
+#inner-circle,
+#outer-circle {
+  position: absolute;
+  border-radius: 50%;
+}
+#inner-circle {
+  left: 50%;
+  top: 38px;
+  height: 44px;
+  width: 44px;
+  background: #fff;
+  margin: -22px 0 0 -22px;
+  z-index: 2;
+}
+#inner-circle.is-clicked {
+  height: 38px;
+  width: 38px;
+  margin: -19px 0 0 -19px;
+}
+#white-flash.normal {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  opacity: 1;
+  -webkit-transition: opacity 0.9s ease-out;
+  -o-transition: opacity 0.9s ease-out;
+  transition: opacity 0.9s ease-out;
+}
+#white-flash.do-transition {
+  opacity: 0;
+  background: #fff;
+}
+#display-error {
+  color: #000;
+  background-color: #fff;
+}
+.react-html5-camera-photo {
+  position: relative;
+  text-align: center;
+}
+.react-html5-camera-photo > img,
+.react-html5-camera-photo > video {
+  width: 100% !important;
+}
+.react-html5-camera-photo > .display-error {
+  width: 100% !important;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .react-html5-camera-photo > .display-error,
+  .react-html5-camera-photo > img,
+  .react-html5-camera-photo > video {
+    width: 100%;
+  }
+}
+.react-html5-camera-photo-fullscreen > img,
+.react-html5-camera-photo-fullscreen > video {
+  width: 100vw;
+  height: 100vh;
+}
+.react-html5-camera-photo-fullscreen > video {
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+.react-html5-camera-photo-fullscreen > .display-error {
+  width: 100vw;
+  height: 100vh;
+}
+/*# sourceMappingURL=index.css.map*/
